crates/sgf-core/tests/snapshots/ops_spawn_weight/clear_weight_2.snap
---
source: crates/sgf-core/tests/ops_spawn_weight.rs
expression: "report(&session, &result)"
---
Cleared the spawn weight of Coruscant #2
inverse: SetSpawnWeight { system: 2, base: Some(0.0) }

--- scenario
+++ scenario
@@ -33,7 +33,7 @@
 
 	### Systems, one per line in the mod's shape
 	system = { id = "1" name = "Galactic Center" position = { x = 0 y = 0 } initializer = misc_system_init_01 }
-	system = { id = "2" name = "Coruscant" position = { x = 0 y = -56 } initializer = custom_starting_init_01 spawn_weight = { base = 0 modifier = { add = 10000 has_country_flag = galactic_empire } } } # trailing comment with } brace
+	system = { id = "2" name = "Coruscant" position = { x = 0 y = -56 } initializer = custom_starting_init_01 spawn_weight = { modifier = { add = 10000 has_country_flag = galactic_empire } } } # trailing comment with } brace
 	system = { id = "16" name = "" position = { x = -54 y = -88.5 z = 4 } }
 	system = { id = "111" name = "NAME_Corellia" position = { x = { min = 20 max = 30 } y = 18 } spawn_design = my_design }
