crates/sgf-core/tests/snapshots/ops_spawn_weight/set_weight_512.snap
---
source: crates/sgf-core/tests/ops_spawn_weight.rs
expression: "report(&session, &result)"
---
Set system 512 spawn weight to 2.5
inverse: SetSpawnWeight { system: 512, base: None }

--- scenario
+++ scenario
@@ -49,7 +49,7 @@
 		}
 	}
 	system = { id = "9" name = "Lonely" position = { x = -90 y = 90 } }
-	system = { id = "512" name = "Flagged" position = { x = 70 y = -20 } initializer = misc_system_init_02 spawn_weight = { modifier = { add = 10000 has_country_flag = sgf_grammar } } }
+	system = { id = "512" name = "Flagged" position = { x = 70 y = -20 } initializer = misc_system_init_02 spawn_weight = { base = 2.5 modifier = { add = 10000 has_country_flag = sgf_grammar } } }
 	system = { id = "888" name = "Reserved" position = { x = 90 y = -60 } initializer = custom_starting_init_01 spawn_weight = { base = 1 modifier = { factor = 0 is_ai = yes } } }
 
 	add_hyperlane = { from = "1" to = "2" }
